Fix for horizontal scroll on mobile

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -18,5 +18,4 @@ body {
   color: $black;
   height: 100%;
   position: relative;
-  overflow-x: hidden;
 }
